# genet

./: .gitignore  MANIFEST.ini  README.md  pyproject.toml
genet/: README.md  __init__.py  estimators.py  losses.py  penalties.py
genet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
genet/model_selection/: __init__.py  cross_validation.py
genet/solvers/: __init__.py  admm_solver.py  cgd_solver.py
notebooks/: 2D_grid.ipynb  3D_grid.ipynb  path_graph.ipynb
tests/: conftest.py  test_api_imports.py  test_estimators_glm.py  test_estimators_normal.py  test_model_selection.py  test_penalties_losses.py  test_solvers_gaussian.py  test_solvers_glm.py
