[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genet"
version = "0.1.0"
description = "Generalized Elastic Net on graphs (GEN penalty)"
readme = "genet/README.md"
requires-python = ">=3.9"
license = {text = "Specify your license"}
authors = [{name = "Huy Tran, Sansen Wei, Claire Donnat (package refactor)"}]
dependencies = [
  "numpy>=1.21",
  "scipy>=1.8",
  "cvxpy>=1.3",
  "scikit-learn>=1.0",
  "networkx>=2.7"
]

[project.urls]
Homepage = "https://example.org/placeholder"
[project.optional-dependencies]
dev = ["pytest>=7.0", "networkx>=2.7", "scikit-learn>=1.0", "cvxpy>=1.3"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
genet = ["notebooks/*.ipynb"]

